# RO

./: AUTHORS  LICENSE  PROJET Recherche Opérationnelle.docx  README.txt
src/base/: automata.h  solution.h
test/: CMakeLists.txt  t-eval.cpp  t-exportSVG.cpp  t-solution.cpp
test/2/: t-eval.cpp
